--- a/exercise/physics/Quantum Mechanics/HW4/QM HW4.tex
+++ b/exercise/physics/Quantum Mechanics/HW4/QM HW4.tex
@@ -269,4 +269,71 @@ If $E_{g2}<0$, then $k$ is an imaginary number. That contradicts to the finitene
     \boxed{E_{g1}<0.}
 \end{equation}
 \end{problem}
+\begin{problem}[Hermite Polynomial]
+    (1) \begin{equation}
+        \frac{\dd{u}}{\dd{z}}=\sum_{k=1}^{+\infty}ka_kz^{k-1}.
+    \end{equation}
+    \begin{equation}
+        \frac{\dd^2 u}{\dd{z}^2}=\sum_{k=2}^{+\infty}k(k-1)a_kz^{k-2}.
+    \end{equation}
+    Then, 
+    \begin{equation}
+        \sum_{k=0}^{+\infty}\left[(k+2)(k+1)a_{k+2}-2ka_k+(\lambda_n-1)a_k\right]z^k=0.
+    \end{equation}
+    So, 
+    \begin{equation}
+        \frac{a_{k+2}}{a_k}=\frac{2k+1-\lambda_n}{(k+2)(k+1)}.
+    \end{equation}
+    $u_n$ is finite when $x\rightarrow\infty$, then there exists a $n$ such that $a_{n+2}=0$. We can deduce that
+    \begin{equation}
+        \boxed{\lambda_n=2n+1.}
+    \end{equation}
+    \begin{equation}
+        E_n=\frac{1}{2}\lambda \hbar \omega=\left(n+\frac{1}{2}\right)\hbar\omega.
+    \end{equation}
+    (2) \begin{equation}
+        e^{-(s-z)^2}=\sum_{n=0}^{\infty}\frac{H_n(z)e^{-z^2}}{n!}s^n.
+    \end{equation}
+    \begin{equation}
+        H_n(z)e^{-z^2}=\left.\frac{\dd^n}{\dd{s}^n}e^{-(s-z)^2}\right|_{s=0}.
+    \end{equation}
+    $\dd{s}=-\dd{(z-s)}$, so 
+    \begin{equation}
+        \boxed{H_n(z)=(-)^ne^{z^2}\frac{\dd ^n}{\dd{z}^n}e^{-z^2}.}
+    \end{equation}
+    (3) \begin{equation}
+        \frac{\pa G}{\pa s}=\sum_{n=0}^{\infty}\frac{1}{n!}H_{n+1}(z)s^n.
+    \end{equation}
+    \begin{equation}
+        2sG=\sum_{n=1}^{\infty}2n\frac{1}{n!}H_{n-1}s^n.
+    \end{equation}
+    Compare the coefficients of $s^n$,
+    \begin{equation}
+        \boxed{H_{n+1}(z)-2zH_n(z)+2nH_{n-1}(z).}
+    \end{equation}
+    \begin{equation}
+        \frac{\pa G}{\pa z}=\sum_{n=0}^{\infty}\frac{1}{n!}\frac{\dd}{\dd z}H_n(z)s^n.
+    \end{equation}
+    Hence,
+    \begin{equation}
+        \boxed{\frac{\dd}{\dd{z}}H_n=2nH_{n-1}.}
+    \end{equation}
+    (4) \begin{equation}
+        \int_{-\infty}^{+\infty}G_1(s,z)G_2(t,z)\dd{z}=e^{-(z-(s+t))^2}e^{2st}=\Gamma(\frac{1}{2})e^{2st}.
+    \end{equation}
+    Therefore,
+    \begin{equation}
+        \boxed{ \int_{-\infty}^{+\infty}G_1(s,z)G_2(t,z)\dd{z}=\sqrt{\pi}e^{2st}.}
+    \end{equation}
+    \begin{equation}
+        G_1(s,z)G_2(t,z)=\sum_{(n,m)\in \mathbb{N}^2}\frac{1}{n!m!}H_nH_ms^nt^m.
+    \end{equation}
+    \begin{equation}
+        e^{2st}=\sum_{n=0}^{+\infty}\frac{(2st)^n}{n!}.
+    \end{equation}
+    Therefore,
+    \begin{equation}
+        \boxed{\int_{-\infty}^{+\infty}H_n(z)H_m(z)e^{-z^2}\dd{z}=\delta_{nm}2^nn!\sqrt{\pi}.}
+    \end{equation}
+\end{problem}
 \end{document}
