--- a/exercise/physics/Quantum Mechanics/HW4/QM HW4.tex
+++ b/exercise/physics/Quantum Mechanics/HW4/QM HW4.tex
@@ -1,5 +1,7 @@
 \documentclass{article}
-\newcommand{\mydate}{September 24, 2025}
+\section*{Generating Function}
+/*************  ✨ Smart Paste 📚  *************/
+/*******  005d4cd5-5dfe-406f-8654-aea60bd5593d  *******/\newcommand{\mydate}{September 24, 2025}
 \newcommand{\mytitle}{QM HW4}
 \title{\textbf{\mytitle}}
 \author{Jiete XUE}
@@ -309,7 +311,7 @@ If $E_{g2}<0$, then $k$ is an imaginary number. That contradicts to the finitene
     \end{equation}
     Compare the coefficients of $s^n$,
     \begin{equation}
-        \boxed{H_{n+1}(z)-2zH_n(z)+2nH_{n-1}(z).}
+        \boxed{H_{n+1}(z)-2zH_n(z)+2nH_{n-1}(z)=0.}
     \end{equation}
     \begin{equation}
         \frac{\pa G}{\pa z}=\sum_{n=0}^{\infty}\frac{1}{n!}\frac{\dd}{\dd z}H_n(z)s^n.
