--- a/exercise/physics/Quantum Mechanics/HW4/QM HW4.tex
+++ b/exercise/physics/Quantum Mechanics/HW4/QM HW4.tex
@@ -1,7 +1,6 @@
 \documentclass{article}
-\section*{Generating Function}
-/*************  ✨ Smart Paste 📚  *************/
-/*******  005d4cd5-5dfe-406f-8654-aea60bd5593d  *******/\newcommand{\mydate}{September 24, 2025}
+
+\newcommand{\mydate}{September 24, 2025}
 \newcommand{\mytitle}{QM HW4}
 \title{\textbf{\mytitle}}
 \author{Jiete XUE}
