--- a/saved material/extra/Hermite polynomial/Hermite polynomial.tex
+++ b/saved material/extra/Hermite polynomial/Hermite polynomial.tex
@@ -93,5 +93,12 @@ This is a Sturm-Liouville type equation with weight function $w(x)=e^{-x^2}$.
     \begin{equation}
         \boxed{\int_{-\infty}^{+\infty}H_n(z)H_m(z)e^{-z^2}\dd{z}=\delta_{nm}2^nn!\sqrt{\pi}.}
     \end{equation}
-
+\section{The First Several Hermite Polynomials}
+\begin{eqnarray*}
+    &H_0(x)=1\\
+    &H_1(x)=2x\\
+    &H_2(x)=4x^2-2\\
+    &H_3(x)=8x^3-12x\\
+    &H_4(x)=16x^4-48x^2+12\\
+\end{eqnarray*}
 \end{document}
