--- a/fundamental algebra and analysis/fundamental algebra and analysis.tex
+++ b/fundamental algebra and analysis/fundamental algebra and analysis.tex
@@ -58,9 +58,9 @@
 \include{Chapters/Chapter 4}
 \include{Chapters/Chapter 5}
 \include{Chapters/Chapter 6}
+\include{Chapters/Chapter 7}
 
 
 
-
-\include{Chapters/Appendix}
+%\include{Chapters/Appendix}
 \end{document}
